# feltys-movie-maker-2026

./: .gitignore  PROMPT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
samples/: sample.json  sample.wlmp
scripts/: ci-fetch-ffmpeg.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ffmpeg.rs  mod.rs  project.rs  wlmp.rs
src-tauri/src/models/: mod.rs
src/components/About/: AboutDialog.tsx
src/components/Donations/: DonationsDialog.tsx
src/components/GifMeme/: GifMemeMaker.tsx
src/components/MediaLibrary/: MediaLibrary.tsx
src/components/MenuBar/: MenuBar.tsx
src/components/Preview/: Preview.tsx
src/components/PropertiesPanel/: PropertiesPanel.tsx
src/components/Splash/: SplashScreen.tsx
src/components/Timeline/: ClipItem.tsx  Timeline.tsx  TitleItem.tsx  Track.tsx
src/components/Toolbar/: Toolbar.tsx
src/components/Transport/: TransportControls.tsx
src/components/shared/: ContextMenu.tsx  FontPicker.tsx
src/hooks/: useProjectActions.ts
src/state/: projectStore.ts
src/utils/: ffmpegHelpers.ts  fonts.ts  mediaDrag.ts  previewLook.ts  time.ts
