[package]
name = "modern-movie-maker"
version = "0.1.0"
description = "Felty's Movie Maker 2026 — Tauri + React video editor"
authors = ["Matt Kading"]
edition = "2021"

[lib]
name = "modern_movie_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
thiserror = "2"
